Fixed overflow pb long pwd

--- a/html_cgi/style.css
+++ b/html_cgi/style.css
@@ -271,7 +271,8 @@ fieldset {
     margin: 0.5rem 0 0 0;
     text-align: center;
     font-family: "monospace, 'Courier New', Courier";
-    word-wrap: break-word;
+    word-break: break-all;
+    overflow-wrap: anywhere;
     letter-spacing: 0.07rem;
     font-size: 1.2em;
 }
